Cleaned up templates and specified better selection queries

--- a/docker/splunk/local/inputs.conf
+++ b/docker/splunk/local/inputs.conf
@@ -8,7 +8,7 @@ sourcetype = syslog
 
 [monitor:///docker/log/wildfly/server.log]
 disabled = false
-index = SPLUNK_INDEX
-sourcetype = SOURCE_TYPE
+index = __ENVIRONMENT_INDEX__ 	# same as in Dashboard & Reports XMLs
+sourcetype = __SOURCE_TYPE__ 	# usually "picsure_log4j"
 
 
