--- a/docker/.env
+++ b/docker/.env
@@ -1,7 +1,4 @@
 ## container environment variables
-# loads these values into the container
-ENV_FILE=/usr/local/docker-config/monitoring.env
-
 SPLUNK_START_ARGS=--accept-license
+SPLUNK_GENERAL_TERMS=--accept-sgt-current-at-splunk-com
 SPLUNK_PASSWORD=
-
