--- a/docker/splunk/local/inputs.conf
+++ b/docker/splunk/local/inputs.conf
@@ -1,14 +1,11 @@
 [default]
-host = HOSTNAME
-
-[monitor:///docker/log/messages]
-disabled = false
-index = linuxlog
-sourcetype = syslog
+host = __HOSTNAME__
+index = __ENVIRONMENT_INDEX__
 
 [monitor:///docker/log/wildfly/server.log]
 disabled = false
-index = __ENVIRONMENT_INDEX__ 	# same as in Dashboard & Reports XMLs
-sourcetype = __SOURCE_TYPE__ 	# usually "picsure_log4j"
+sourcetype = picsure_log4j
 
-
+[monitor:///docker/log/hpds/hpds.log]
+disabled = false
+sourcetype = picsure_log4j
