--- a/docker/splunk/local/outputs.conf
+++ b/docker/splunk/local/outputs.conf
@@ -2,8 +2,8 @@
 index = false
 
 [tcpout]
-defaultGroup=splunk8
+defaultGroup=splunk
 
-[tcpout:splunk8]
-server=SPLUNK_SERVER
-[tcpout-server://SPLUNK_SERVER]
+[tcpout:splunk]
+server=__SPLUNK_SERVER__
+[tcpout-server://__SPLUNK_SERVER__]
