--- a/docker/splunk/local/server.conf
+++ b/docker/splunk/local/server.conf
@@ -1,6 +1,6 @@
 [general]
-serverName = splunk8-forwarder
-#pass4SymmKey =
+serverName = splunk-forwarder
+pass4SymmKey = __PASS4SYMKEY__
 
 [httpServer]
 disableDefaultPort = true
@@ -17,3 +17,5 @@ quota = MAX
 slaves = *
 stack_id = free
 
+[sslConfig]
+sslPassword = __SSLPASSWORD__
