--- a/docker/splunk/local/inputs.conf
+++ b/docker/splunk/local/inputs.conf
@@ -2,10 +2,17 @@
 host = __HOSTNAME__
 index = __ENVIRONMENT_INDEX__
 
-[monitor:///docker/log/wildfly/server.log]
+[monitor:///docker/log/wildfly/server.log*]
 disabled = false
 sourcetype = picsure_log4j
 
-[monitor:///docker/log/hpds/hpds.log]
+[monitor:///docker/log/hpds/hpds.log*]
 disabled = false
 sourcetype = picsure_log4j
+
+[monitor:///docker/log/psama/psama.log*]
+disabled = false
+sourcetype = picsure_log4j
+
+[splunktcp://9997]
+disabled = false
