--- a/docker/splunk/local/inputs.conf
+++ b/docker/splunk/local/inputs.conf
@@ -4,9 +4,11 @@ index = __ENVIRONMENT_INDEX__
 
 [monitor:///docker/log/wildfly/server.log*]
 disabled = false
+sourcetype = log4j
 
 [monitor:///docker/log/hpds/hpds.log*]
 disabled = false
+sourcetype = log4j
 
 [monitor:///docker/log/psama/psama.log*]
 disabled = false
