--- a/docker/splunk/local/inputs.conf
+++ b/docker/splunk/local/inputs.conf
@@ -14,5 +14,20 @@ sourcetype = log4j
 disabled = false
 sourcetype = picsure_log4j
 
+[monitor:///docker/log/httpd/.../*.log*]
+disabled = false
+
+[monitor:///docker/log/dictionary/dictionary.log*]
+disabled = false
+sourcetype = log4j
+
+[monitor:///docker/log/passthru/passthru.log*]
+disabled = false
+sourcetype = log4j
+
+[monitor:///docker/log/aggdict/aggdict.log*]
+disabled = false
+sourcetype = log4j
+
 [splunktcp://9997]
 disabled = false
