--- a/docker/splunk/local/inputs.conf
+++ b/docker/splunk/local/inputs.conf
@@ -29,5 +29,9 @@ sourcetype = log4j
 disabled = false
 sourcetype = log4j
 
+[monitor:///docker/log/uploader/uploader.log*]
+disabled = false
+sourcetype = log4j
+
 [splunktcp://9997]
 disabled = false
