[ALS-9970] Update Forwarder (#1)

--- a/docker/splunk/local/inputs.conf
+++ b/docker/splunk/local/inputs.conf
@@ -1,14 +1,37 @@
 [default]
-host = HOSTNAME
+host = __HOSTNAME__
+index = __ENVIRONMENT_INDEX__
 
-[monitor:///docker/log/messages]
+[monitor:///docker/log/wildfly/server.log*]
 disabled = false
-index = linuxlog
-sourcetype = syslog
+sourcetype = log4j
 
-[monitor:///docker/log/wildfly/server.log]
+[monitor:///docker/log/hpds/hpds.log*]
 disabled = false
-index = __ENVIRONMENT_INDEX__ 	# same as in Dashboard & Reports XMLs
-sourcetype = __SOURCE_TYPE__ 	# usually "picsure_log4j"
+sourcetype = log4j
 
+[monitor:///docker/log/psama/psama.log*]
+disabled = false
+sourcetype = picsure_log4j
 
+[monitor:///docker/log/httpd/.../*.log*]
+disabled = false
+
+[monitor:///docker/log/dictionary/dictionary.log*]
+disabled = false
+sourcetype = log4j
+
+[monitor:///docker/log/passthru/passthru.log*]
+disabled = false
+sourcetype = log4j
+
+[monitor:///docker/log/aggdict/aggdict.log*]
+disabled = false
+sourcetype = log4j
+
+[monitor:///docker/log/uploader/uploader.log*]
+disabled = false
+sourcetype = log4j
+
+[splunktcp://9997]
+disabled = false
